--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue": "^2.6.10",
         "vue-media-queries": "0.0.5",
         "vue-router": "^3.0.3",
+        "vuedraggable": "^2.23.2",
         "vuelidate": "^0.7.4",
         "vuex": "^3.0.1"
     },
