--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "core-js": "^2.6.5",
         "node-sass": "^4.12.0",
         "register-service-worker": "^1.6.2",
+        "swiper": "^5.2.1",
         "vue": "^2.6.10",
         "vue-media-queries": "0.0.5",
         "vue-router": "^3.0.3",
