--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "register-service-worker": "^1.6.2",
         "swiper": "^5.2.1",
         "vue": "^2.6.10",
-        "vue-media-queries": "0.0.5",
+        "vue-infinite-loading": "^2.4.4",
         "vue-mq": "^1.0.1",
         "vue-router": "^3.0.3",
         "vuedraggable": "^2.23.2",
