--- a/package.json
+++ b/package.json
@@ -13,34 +13,37 @@
         "@fortawesome/free-brands-svg-icons": "^5.12.0",
         "@fortawesome/free-solid-svg-icons": "^5.12.0",
         "@fortawesome/vue-fontawesome": "^0.1.9",
+        "@sentry/browser": "^5.10.2",
+        "@sentry/integrations": "^5.10.2",
         "axios": "^0.19.0",
-        "bulma": "^0.7.5",
+        "bulma": "^0.8.0",
         "bulma-extensions": "^6.2.7",
-        "core-js": "^2.6.11",
+        "core-js": "^3.6.1",
         "node-sass": "^4.13.0",
         "register-service-worker": "^1.6.2",
         "swiper": "^5.2.1",
         "vue": "^2.6.11",
         "vue-infinite-loading": "^2.4.4",
         "vue-mq": "^1.0.1",
-        "vue-router": "^3.0.3",
+        "vue-router": "^3.1.3",
         "vuedraggable": "^2.23.2",
         "vuelidate": "^0.7.4",
         "vuex": "^3.1.2"
     },
     "devDependencies": {
-        "@vue/cli-plugin-babel": "^3.12.1",
-        "@vue/cli-plugin-eslint": "^3.12.1",
-        "@vue/cli-plugin-pwa": "^3.12.1",
-        "@vue/cli-plugin-unit-jest": "^3.12.1",
-        "@vue/cli-service": "^3.12.1",
-        "@vue/test-utils": "1.0.0-beta.29",
+        "@sentry/webpack-plugin": "^1.9.3",
+        "@vue/cli-plugin-babel": "^4.1.2",
+        "@vue/cli-plugin-eslint": "^4.1.2",
+        "@vue/cli-plugin-unit-jest": "^4.1.2",
+        "@vue/cli-service": "^4.1.2",
+        "@vue/test-utils": "1.0.0-beta.30",
         "babel-core": "7.0.0-bridge.0",
-        "babel-eslint": "^10.0.1",
-        "babel-jest": "^23.6.0",
-        "eslint": "^5.16.0",
-        "eslint-plugin-vue": "^5.0.0",
-        "sass-loader": "^7.1.0",
+        "babel-eslint": "^10.0.3",
+        "babel-jest": "^24.9.0",
+        "babel-plugin-transform-remove-console": "^6.9.4",
+        "eslint": "^6.8.0",
+        "eslint-plugin-vue": "^6.1.2",
+        "sass-loader": "^8.0.0",
         "vue-cli-plugin-fontawesome": "^0.2.0",
         "vue-template-compiler": "^2.6.11"
     }
