--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "node-sass": "^4.13.0",
         "register-service-worker": "^1.6.2",
         "swiper": "^5.2.1",
+        "v-click-outside": "^3.0.0",
         "vue": "^2.6.11",
         "vue-infinite-loading": "^2.4.4",
         "vue-mq": "^1.0.1",
